namespace DiscountManager.Discounts;

public enum DiscountType
{
    Percentage,
    FixedAmount
}
